Add SYCL to testexec

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -150,7 +150,7 @@ target_compile_definitions(testviews PRIVATE ${zfp_compressed_array_defs})
 add_test(NAME testviews COMMAND testviews)
 
 # testexec
-if(ZFP_WITH_OPENMP OR ZFP_WITH_CUDA OR ZFP_WITH_HIP)
+if(ZFP_WITH_OPENMP OR ZFP_WITH_CUDA OR ZFP_WITH_HIP OR ZFP_WITH_SYCL)
   add_executable(testexec testexec.cpp)
   target_link_libraries(testexec zfp)
   if(ZFP_WITH_OPENMP)
@@ -162,6 +162,9 @@ if(ZFP_WITH_OPENMP OR ZFP_WITH_CUDA OR ZFP_WITH_HIP)
     endif()
     if(ZFP_WITH_HIP)
       target_compile_definitions(testexec PRIVATE -DZFP_WITH_HIP)
+    endif()
+    if(ZFP_WITH_SYCL)
+      target_compile_definitions(testexec PRIVATE -DZFP_WITH_SYCL)
     endif()
   endif()
   add_test(NAME execution-policy COMMAND testexec)
