--- a/src/sycl/CMakeLists.txt
+++ b/src/sycl/CMakeLists.txt
@@ -6,23 +6,23 @@
 
 set(zfp_sycl_sources
     interface.cpp       # main entry point
-    # decode.h
-    # decode1.h
-    # decode2.h
-    # decode3.h
-    # reader.h
-    # encode.h
-    # encode1.h
-    # encode2.h
-    # encode3.h
-    # writer.h
-    # constants.h
+    decode.h
+    decode1.h
+    decode2.h
+    decode3.h
+    reader.h
+    encode.h
+    encode1.h
+    encode2.h
+    encode3.h
+    writer.h
+    constants.h
     device.h
     error.h
     shared.h
-    # timer.h
-    # traits.h
-    # variable.h
+    timer.h
+    traits.h
+    variable.h
     )
 
 set(zfp_sycl_headers
