--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ if(ZFP_WITH_SYCL)
   if (CMAKE_HOST_WIN32)
       # need at least CMake 3.23 for IntelLLVM support of IntelDPCPP package on Windows
       cmake_minimum_required(VERSION 3.23)
+      set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
   else()
       # CMake 3.20.5 is the minimum recommended for IntelLLVM on Linux
       cmake_minimum_required(VERSION 3.20.5)
