Minor adjustments and clean up

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,9 +50,12 @@ endif()
 project(ZFP VERSION ${ZFP_VERSION})
 
 if(ZFP_WITH_SYCL)
+  # export ZET_ENABLE_PROGRAM_DEBUGGING=1
   add_definitions(-DZFP_WITH_SYCL)
   find_package(IntelSYCL REQUIRED)
-  set (CMAKE_CXX_FLAGS "-fsycl")
+  set (CMAKE_CXX_FLAGS "-Wno-implicit-function-declaration -fsycl")
+  set (CMAKE_CXX_FLAGS_DEBUG "-fPIC -O0 -fdebug-info-for-profiling")
+  set (CMAKE_CXX_FLAGS_RELEASE "-fPIC -O3")
 endif()
 
 #------------------------------------------------------------------------------#
