--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,6 +16,26 @@ if(BUILD_TESTING OR BUILD_TESTING_FULL)
   add_test(NAME testviews COMMAND testviews)
 endif()
 
+if(ZFP_WITH_OPENMP OR ZFP_WITH_CUDA OR ZFP_WITH_HIP OR ZFP_WITH_SYCL)
+  add_executable(testexec testexec.cpp)
+  target_link_libraries(testexec zfp)
+  if(ZFP_WITH_OPENMP)
+    target_compile_definitions(testexec PRIVATE -DZFP_WITH_OPENMP)
+  endif()
+  if(NOT DEFINED ZFP_OMP_TESTS_ONLY)
+    if(ZFP_WITH_CUDA)
+      target_compile_definitions(testexec PRIVATE -DZFP_WITH_CUDA)
+    endif()
+    if(ZFP_WITH_HIP)
+      target_compile_definitions(testexec PRIVATE -DZFP_WITH_HIP)
+    endif()
+    if(ZFP_WITH_SYCL)
+      target_compile_definitions(testexec PRIVATE -DZFP_WITH_SYCL)
+    endif()
+  endif()
+  add_test(NAME execution-policy COMMAND testexec)
+endif()
+
 if(BUILD_TESTING_FULL)
   set(CMAKE_CXX_STANDARD 11)
   
